# podcast_transcript

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
podcast-library/: README.md
podcast-library/scripts/: ingest.py  qc_summary.py  rebuild_indexes.py  summarise.py
scripts/: download.sh  setup.sh  transcribe.sh
src/podcast_transcript/: __init__.py  __main__.py  clean.py  cli.py  corrections_user.py  download.py  feed.py  page_scrape.py  pipeline.py  transcribe.py  transcript_fetch.py
src/podcast_transcript/data/: __init__.py  corrections.razib_khan.toml  corrections.toml
tests/: conftest.py  test_clean.py  test_cli.py  test_download.py  test_feed.py  test_library_episode.py  test_library_indexes.py  test_library_ingest.py  test_library_qc.py  test_library_store.py  test_library_vocab.py  test_page_scrape.py  test_pipeline.py  test_transcribe.py  test_transcript_fetch.py
