[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "podcast-transcript"
version = "0.1.0"
description = "Local-only podcast download and transcription using OpenAI Whisper, for Apple Silicon Macs."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "gazuty" }]
keywords = ["podcast", "transcription", "whisper", "apple-silicon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# The package itself has zero required runtime dependencies — the heavy
# `openai-whisper` (and its torch transitive) are pulled in via the
# `whisper` extra so CI can lint/type-check/test without installing torch.
dependencies = []

[project.optional-dependencies]
whisper = [
    "openai-whisper>=20231117",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.6.0",
    "mypy>=1.10",
]

[project.scripts]
podcast-transcript = "podcast_transcript.cli:main"

[project.urls]
Homepage = "https://github.com/gazuty/podcast_transcript"
Issues = "https://github.com/gazuty/podcast_transcript/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_transcript"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "N",    # pep8-naming
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",   # unused fixture args are normal
    "N802",  # test naming conventions
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = false  # whisper has no stubs
show_error_codes = true

[[tool.mypy.overrides]]
module = ["whisper", "whisper.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
]
